tdf#125916 DOCX import: fix outline numbering at tracked deletion

Now there is no extra header after import (fixed regression from the
commit 8acc15b5113c798ecdbeed91456a92e7b0c1334e "tdf#118699 DOCX import:
don't add numbering") and the actual outline numbering is stable during
the next export/import cycles (losing correct numbering is the original
bug of DOCX import with change tracking).

Change-Id: I49a78549c10c4ce0b97bb2d593059bf25c4d7aab
Reviewed-on: https://gerrit.libreoffice.org/74054
Reviewed-by: László Németh <nemeth@numbertext.org>
Tested-by: László Németh <nemeth@numbertext.org>
(cherry picked from commit eeb9481304572cc404ea1da9f3dabff43d6d191c)
Reviewed-on: https://gerrit.libreoffice.org/74255
Tested-by: Jenkins
Reviewed-by: Xisco Faulí <xiscofauli@libreoffice.org>